# jsaddle

jsaddle/: jsaddle.cabal
jsaddle-webkit2gtk/: jsaddle-webkit2gtk.cabal
jsaddle-webkit2gtk/src/Language/Javascript/JSaddle/: WebKitGTK.hs
jsaddle-webkitgtk/src/Language/Javascript/JSaddle/: WebKitGTK.hs
jsaddle/src-ghc/Data/JSString/Internal/: Type.hs
jsaddle/src/Language/Javascript/JSaddle/: Run.hs
