name: jsaddle
version: 0.9.4.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@googlemail.com>
synopsis: Interface for JavaScript that works with GHCJS and GHC
description:
    This package provides an EDSL for calling JavaScript that
    can be used both from GHCJS and GHC.  When using GHC
    the application is run using Warp and WebSockets to
    drive a small JavaScipt helper.
category: Web, Javascript
author: Hamish Mackenzie

source-repository head
    type: git
    location: https://github.com/ghcjs/jsaddle
    subdir: jsaddle

flag call-stacks
  description: Include HasCallStack constraint on calls unchecked calls
  default: False

flag check-unchecked
  description: Fail unchecked calls when they are called (rather than when the result is evaluated)
  default: False

library

        build-depends:
            ghcjs-base -any,
            ghcjs-prim -any
    exposed-modules:
        Language.Javascript.JSaddle
        Language.Javascript.JSaddle.Arguments
        Language.Javascript.JSaddle.Classes
        Language.Javascript.JSaddle.Classes.Internal
        Language.Javascript.JSaddle.Evaluate
        Language.Javascript.JSaddle.Exception
        Language.Javascript.JSaddle.Helper
        Language.Javascript.JSaddle.Marshal.String
        Language.Javascript.JSaddle.Monad
        Language.Javascript.JSaddle.Object
        Language.Javascript.JSaddle.Properties
        Language.Javascript.JSaddle.Run
        Language.Javascript.JSaddle.Run.Files
        Language.Javascript.JSaddle.String
        Language.Javascript.JSaddle.Value
        Language.Javascript.JSaddle.Types
    build-depends:
        aeson >=0.8.0.2 && <1.3,
        base <5,
        base64-bytestring >=1.0.0.1 && <1.1,
        bytestring >=0.10.6.0 && <0.11,
        exceptions >=0.8 && <0.9,
        lens >=3.8.5 && <4.16,
        primitive >=0.6.1.0 && <0.7,
        text >=1.2.1.3 && <1.3,
        transformers >=0.4.2.0 && <0.6
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans -Wall
    if flag(check-unchecked)
        cpp-options: -DCHECK_UNCHECKED
    if flag(call-stacks) || flag(check-unchecked)
        cpp-options: -DJSADDLE_HAS_CALL_STACK


